apps/reactive-resume/overlays/understairs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reactive-resume
  namespace: reactive-resume
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
  hostnames:
    - cv.homelab.blacksd.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: reactive-resume
          port: 80
